# hmftools

./: .gitignore  LICENSE  README.md  README_TARGETED.md  archive_and_upload_jars.sh  cloudbuild.yaml  entrypoint_template.sh  git-release.sh  gradle.properties  hmf_checkstyle.xml  hmf_code_scheme.xml  hmftools-build.py  hmftools-build.sh  hmftools-bulid.sh  libbwa.Darwin.dylib  pom.xml  settings.gradle.kts
.githooks/: pre-commit
.github/: CODEOWNERS
cuppa/src/main/python/pycuppa/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
cuppa/src/main/python/pycuppa/cuppa/: __init__.py  constants.py  logger.py  predict.py  runners.py  train.py
cuppa/src/main/python/pycuppa/cuppa/classifier/: classifiers.py  cuppa_classifier.py  cuppa_classifier_utils.py  cuppa_compare.py  cuppa_prediction.py  feature_importance.py  missing_features_handler.py
cuppa/src/main/python/pycuppa/cuppa/components/: calibration.py  class_resampling.py  feature_selection.py  label_remapper.py  logistic_regression.py  mutational_signatures.py  passthrough.py  preprocessing.py  prob_combiner.py  prob_overriders.py  profile_similarity.py
cuppa/src/main/python/pycuppa/cuppa/compose/: column_transformer.py  pipeline.py
cuppa/src/main/python/pycuppa/cuppa/misc/: cached_class_property.py  executors.py  make_mock_data.py  mock_data.py  plotting.py  stat_tests.py  unpickle.py  utils.py
cuppa/src/main/python/pycuppa/cuppa/performance/: confusion_matrix.py  performance_stats.py  plot_confusion.R
cuppa/src/main/python/pycuppa/cuppa/runners/: args.py  prediction_runner.py  training_runner.py
cuppa/src/main/python/pycuppa/cuppa/sample_data/: cuppa_features.py  sample_metadata.py
cuppa/src/main/python/pycuppa/cuppa/test/: test_logging.py  test_runners.py
cuppa/src/main/python/pycuppa/cuppa/tests/: mock_data.py  mock_data_builder.py  test_runners.py
cuppa/src/main/python/pycuppa/cuppa/visualization/: plot_predictions.R  visualization.py
cuppa/src/main/python/pycuppa/doc/: figures.pptx
cuppa/src/main/python/pycuppa/doc/notebooks/: predict_example.html  predict_example.ipynb  train_example.html  train_example.ipynb
cuppa/src/main/python/pycuppa/doc/visualization/: make_vis_one_sample.py
cuppa/src/main/python/pycuppa/resources/feature_names/: gen_pos.hg37.csv  gen_pos.hg38.csv
cuppa/src/main/python/pycuppa/tests/: mock_data.py  mock_data_builder.py  test_logging.py
cuppa/src/main/python/pycuppa/tests/classifier/: test_classifiers.py  test_cuppa_classifier.py  test_cuppa_prediction.py  test_feature_importance.py
cuppa/src/main/python/pycuppa/tests/components/: test_calibration.py  test_feature_selection.py  test_logistic_regression.py  test_mutational_signatures.py  test_preprocessing.py  test_prob_combiner.py  test_prob_overriders.py  test_profile_similarity.py
cuppa/src/main/python/pycuppa/tests/compose/: test_column_transformer.py
cuppa/src/main/python/pycuppa/tests/misc/: test_executors.py
cuppa/src/main/python/pycuppa/tests/performance/: test_performance_classes.py
cuppa/src/main/python/pycuppa/tests/runners/: test_args.py  test_runners.py
cuppa/src/main/python/pycuppa/tests/sample_data/: test_cuppa_features.py  test_sample_metadata.py
cuppa/src/main/python/pycuppa/tests/visualization/: test_visualization.py
cuppa/src/main/resources/pycuppa/: README.md  pyproject.toml
cuppa/src/main/resources/pycuppa/cuppa/: predict.py  runners.py
cuppa/src/main/resources/pycuppa/cuppa/classifier/: feature_importance.py
cuppa/src/main/resources/pycuppa/cuppa/components/: calibration.py  feature_selection.py  logistic_regression.py  preprocessing.py  prob_combiner.py  prob_overriders.py
cuppa/src/main/resources/pycuppa/cuppa/compose/: column_transformer.py
cuppa/src/main/resources/pycuppa/cuppa/misc/: mock_data.py
cuppa/src/main/resources/pycuppa/cuppa/performance/: confusion_matrix.py
cuppa/src/main/resources/pycuppa/cuppa/sample_data/: cuppa_features.py  sample_metadata.py
cuppa/src/main/resources/pycuppa/cuppa/test/: test_runners.py
cuppa/src/main/resources/pycuppa/doc/: tables.xlsx
cuppa/src/main/resources/pycuppa/doc/visualization/: make_vis_one_sample.py
linx/: pom.xml  (+5 more)
(+18860 files in other folders)
