[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycuppa"
version = "2.2.0"
authors = [{ name="Luan Nguyen", email="lnguyen@hartwigmedicalfoundation.nl" }]
description = "Python machine learning component of CUPPA"
readme = "README.md"
requires-python = ">=3.9"

## Use strict versioning due to avoid deprecation warnings and differing classifier output from future versions
dependencies = [
    "pandas == 2.0.3",
    "numpy == 1.24.3",
    "scikit-learn == 1.3.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
test = ["pytest >= 7.4.0"]

[tool.setuptools.packages.find]
include = [
    "cuppa", "cuppa.*",
    "resources", "resources.*",
    "tests", "tests.*"
]