[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycuppa"
version = "2.2.1"
authors = [{ name="Luan Nguyen", email="lnguyen@hartwigmedicalfoundation.nl" }]
description = "Python machine learning component of CUPPA"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas == 2.0.*", ## Strict versioning avoids deprecation warnings
    "numpy >= 1.24",
    "scikit-learn == 1.3.0", ## Strict versioning avoids wrong sklearn version de-serialization warnings
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.4",
    "ipython >= 8.18"
]

[tool.setuptools.packages.find]
include = [
    "cuppa", "cuppa.*",
    "resources", "resources.*",
    "tests", "tests.*"
]