[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycuppa"
version = "2.2.1"
authors = [{ name="Luan Nguyen", email="lnguyen@hartwigmedicalfoundation.nl" }]
description = "Python machine learning component of CUPPA"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas == 2.0.*", ## Newer pandas versions throw warnings about some methods becoming deprecated
    "numpy >=1.0.0,<2.0.0", ## numpy v2 uses a different underlying binary data structure vs numpy v1
    "scikit-learn == 1.3.0", ## sklearn objects should be de-serialized using the same sklearn version they were serialized (i.e. pickled) with
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.4",
    "ipython >= 8.18"
]

[tool.setuptools.packages.find]
include = [
    "cuppa", "cuppa.*",
    "resources", "resources.*",
    "tests", "tests.*"
]